# llm-detection-proxy

./: LICENSE  README.md  app.py  catalog-info.yaml  pyproject.toml
.github/: CODEOWNERS
llm_detections/: elastic_connector.py  enrichment.py
